<resources>
    <string name="app_name">My Application</string>
    <string name="gabriel">Gabriel</string>
    <string name="distancia">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litre">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litre">Kms por Litro</string>
    <string name="total_price">Seu Gasto Total Será de:</string>
    <string name="r_0">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">login</string>
    <string name="register_text">Ainda não é cadastrado? Cadastre-se!</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="button">Button</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="text_center">Uma simples e perfeitamente extraída dose de espresso misturado com leite fresco e chocolate fazem esta bebida deliciosa.</string>
    <string name="ingredients">Ingredientes</string>
    <string name="minutes">15 minutos</string>
    <string name="favorites">54214</string>
    <string name="ingredient_1">1 dose espresso</string>
    <string name="ingredient_2">100ml leite</string>
    <string name="ingredient_3">1 colher de chocolate em pó</string>
</resources>