<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/text_cappuccino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cappuccino"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        app:layout_constraintEnd_toEndOf="@id/view_top"
        app:layout_constraintStart_toStartOf="@id/view_top"
        app:layout_constraintTop_toTopOf="@id/view_top" />

    <ImageView
        android:id="@+id/image_time"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/image_favorite"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        app:srcCompat="@drawable/ic_access_time" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_time"
        app:layout_constraintTop_toTopOf="@id/image_time"
        app:srcCompat="@drawable/ic_favorite" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintEnd_toStartOf="@id/image_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_time" />

    <TextView
        android:id="@+id/text_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_time"
        app:layout_constraintTop_toBottomOf="@id/image_favorite"
        app:layout_constraintTop_toTopOf="@id/text_time" />

    <View
        android:id="@+id/view_line_center"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_time" />

    <TextView
        android:id="@+id/text_middle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_center"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line_center" />

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/ingredients"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_middle" />

    <ImageView
        android:id="@+id/image_arrow_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients"
        app:srcCompat="@drawable/ic_arrow_right"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_ingredients_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_arrow_1"
        app:layout_constraintTop_toTopOf="@id/image_arrow_1"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_1"
        android:text="@string/ingredient_1"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/image_arrow_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_1"
        app:srcCompat="@drawable/ic_arrow_right"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_ingredients_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_arrow_2"
        app:layout_constraintTop_toTopOf="@id/image_arrow_2"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_2"
        android:text="@string/ingredient_2"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/image_arrow_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_2"
        app:srcCompat="@drawable/ic_arrow_right"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_ingredients_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_arrow_3"
        app:layout_constraintTop_toTopOf="@id/image_arrow_3"
        app:layout_constraintBottom_toBottomOf="@id/image_arrow_3"
        android:text="@string/ingredient_3"
        android:textSize="16sp"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>